# GWToolboxpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  API.sln  API.vcxproj  API.vcxproj.filters  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  GWCA_defines.h  GWToolbox.vcxproj  GWToolbox.vcxproj.filters  GWToolboxpp.sln  GwConstants.h  Hotkeys.cpp  Issues_Suggestions.md  LICENSE  OSHGui.vcxproj  PENDING_workflow_site-deploy.yml  README.md  UPDATE.md  build-clang.bat  deploy.bat  deploy.py  gitl.bat  gwtoolbox.wxs.in  issues_suggestions.md  main.cpp  symlinks.bat  updates.md  vcpkg-configuration.json  vcpkg.json
CSLauncher/: CMakeLists.txt  CSLauncher.cs  CSLauncher.csproj  CharSelector.Designer.cs  CharSelector.cs  CharSelector.resx  GWCAMemory.cs  INI Reader.cs  ResInstaller.cs  Updater.Designer.cs  Updater.cs  Updater.resx  app.manifest
CSLauncher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
CSLauncher/Resources/: DefaultTheme.txt
GWToolbox/: AvReadiness.cpp  AvReadiness.h  AvReadinessWindow.cpp  AvReadinessWindow.h  BondsWindow.cpp  BondsWindow.h  BuildPanel.cpp  BuildPanel.h  Builds.cpp  Builds.h  CMakeLists.txt  Config.h  DialogPanel.cpp  DialogPanel.h  DistanceWindow.cpp  DistanceWindow.h  Download.cpp  Download.h  EditBuild.cpp  EditBuild.h  EmbeddedResource.h  EmptyForm.cpp  EmptyForm.h  GWTBLauncher.vcxproj  GWTBLauncher.vcxproj.filters  GWToolbox.cpp  GWToolbox.h  GWToolbox.rc  GWToolbox.vcxproj  GWToolbox.vcxproj.filters  GuiUtils.h  HealthWindow.cpp  HealthWindow.h  HotkeyMgr.cpp  HotkeyMgr.h  HotkeyPanel.cpp  HotkeyPanel.h  Hotkeys.cpp  Hotkeys.h  InfoPanel.cpp  (+48 more)
GWToolbox/GWToolbox/: AgentRenderer.cpp  AgentRenderer.h  BondsWindow.cpp  BondsWindow.h  BuildPanel.cpp  BuildPanel.h  ChatCommands.cpp  ChatCommands.h  ChatFilter.cpp  ChatFilter.h  ChatLogger.h  CircurlarBuffer.h  ClockWindow.cpp  ClockWindow.h  Color.h  Config.cpp  Config.h  CursorFix.cpp  CursorFix.h  D3DVertex.h  Defines.h  DialogPanel.cpp  DialogPanel.h  DistanceWindow.cpp  DistanceWindow.h  EditBuild.cpp  EditBuild.h  GWToolbox.cpp  GWToolbox.h  GameSettings.cpp  GameSettings.h  GuiUtils.cpp  GuiUtils.h  HealthWindow.cpp  HealthWindow.h  HotkeyPanel.cpp  HotkeyPanel.h  Hotkeys.cpp  Hotkeys.h  IRC.cc  (+73 more)
GWToolboxSetup/: CMakeLists.txt  GWToolboxSetup.rc  main.cpp  resource.h  stdafx.h
GWToolboxdll/: CMakeLists.txt  CircurlarBuffer.h  Color.h  CursorFix.cpp  D3DContainers.cpp  D3DContainers.h  Defines.h  GWToolbox.cpp  GWToolbox.h  GWToolbox.rc  GWToolbox.vcxproj  GWToolbox.vcxproj.filters  GWToolboxdll.vcxproj  GWToolboxdll.vcxproj.filters  GuiUtils.cpp  GuiUtils.h  IRC.cc  IRC.cpp  IRC.h  ImGuiAddons.cpp  ImGuiAddons.h  Keys.h  Logger.cpp  Logger.h  MinimapPlugin.h  PluginManager.cpp  PluginManager.h  RectF.h  Timer.h  ToolboxBreakoutWindow.cpp  ToolboxBreakoutWindow.h  ToolboxIni.cpp  ToolboxIni.h  ToolboxModule.cpp  ToolboxModule.h  ToolboxUIElement.cpp  ToolboxUIElement.h  ToolboxWidget.cpp  ToolboxWidget.h  ToolboxWindow.cpp  (+25 more)
GWToolboxdll/Constants/: DailyQuests.cpp  DailyQuests.h  EncStrings.h  MapAdjacency.h  ZaishenMissionMaps.h
GWToolboxdll/GWToolbox/: CircurlarBuffer.h  Color.h  CursorFix.cpp  Defines.h  GWToolbox.cpp  GuiUtils.cpp  GuiUtils.h  IRC.cc  IRC.h  ImGuiAddons.cpp  Keys.h  ToolboxModule.cpp  ToolboxModule.h  ToolboxUIElement.cpp  ToolboxUIElement.h  ToolboxWidget.h  base64.cpp  d3dx9_dynamic.cpp  logger.cpp  main.cpp  mp3.cpp  mp3.h  stdafx.h
GWToolboxdll/Modules/: AprilFools.cpp  AprilFools.h  AudioSettings.cpp  AudioSettings.h  BackupModule.cpp  BackupModule.h  CameraUnlockModule.cpp  CameraUnlockModule.h  CartographerModule.cpp  CartographerModule.h  ChatCommands.cpp  ChatCommands.h  ChatFilter.cpp  ChatFilter.h  ChatLog.cpp  ChatLog.h  ChatSettings.cpp  ChatSettings.h  CodeOptimiserModule.cpp  CodeOptimiserModule.h  CrashHandler.cpp  CrashHandler.h  DangerRingsModule.cpp  DangerRingsModule.h  DialogModule.cpp  DialogModule.h  DiscordIntegration.cpp  DiscordModule.cpp  DiscordModule.h  ExtraWeaponSets.cpp  FpsFix.cpp  FpsFix.h  GWEventBus.cpp  GWEventBus.h  GWFileRequester.cpp  GWFileRequester.h  GameSettings.cpp  GameSettings.h  GamepadModule.cpp  GamepadModule.h  (+111 more)
GWToolboxdll/Unused/: AprilFools.cpp  AprilFools.h  ChatLog.cpp  ChatLog.h  DialogsWindow.cpp  DialogsWindow.h  ExtraWeaponSets.cpp  ExtraWeaponSets.h  FavorTrackerModule.cpp  FavorTrackerModule.h  GWFileRequester.cpp  GuildWarsUI_ToolboxSettings.cpp  GuildWarsUI_ToolboxSettings.h  HeroEquipmentModule.cpp  HeroEquipmentModule.h  InventoryOverlayWidget.cpp  IronManModule.cpp  IronManModule.h  LoginModule.cpp  LoginModule.h  SteamModule.cpp  SteamModule.h  UIScaler.cpp  ZrawDeepModule.cpp
GWToolboxdll/Utils/: AoeEffects.cpp  AoeEffects.h  ArenaNetFileParser.cpp  ArenaNetFileParser.h  ComPtr.h  Compositor.cpp  Compositor.h  EncString.cpp  EncString.h  FastIni.cpp  FastIni.h  FileIterator.cpp  FileIterator.h  FontLoader.cpp  FontLoader.h  GameWorldCompositor.cpp  GameWorldCompositor.h  GuiUtils.cpp  GuiUtils.h  HealthLogCache.cpp  HealthLogCache.h  PropSurfaceIndex.cpp  PropSurfaceIndex.h  RateLimiter.cpp  RateLimiter.h  SettingsDoc.cpp  SettingsDoc.h  SettingsRegistry.cpp  SettingsRegistry.h  TeamBuild.cpp  TeamBuild.h  TeamBuildEncoder.cpp  TeamBuildEncoder.h  TerrainDrape.cpp  TerrainDrape.h  TextUtils.cpp  TextUtils.h  TextUtils.ixx  ThreadedWebSocket.cpp  ThreadedWebSocket.h  (+5 more)
GWToolboxdll/Widgets/: ActiveQuestWidget.cpp  ActiveQuestWidget.h  AlcoholWidget.cpp  AlcoholWidget.h  BondsWidget.cpp  BondsWidget.h  BountyKillTrackerWidget.cpp  BountyKillTrackerWidget.h  ClockWidget.cpp  ClockWidget.h  DistanceWidget.cpp  DistanceWidget.h  EffectsMonitorWidget.cpp  EffectsMonitorWidget.h  ExploitableCorpseWidget.cpp  ExploitableCorpseWidget.h  FavorTracker.cpp  FavorTracker.h  (+35 more)
RestClient/: CMakeLists.txt  CurlWrapper.cpp  CurlWrapper.h  HttpClient.cpp  HttpClient.h  RestClient.cpp  RestClient.h  RestClient.vcxproj  RestClient.vcxproj.filters  WinHttpWrapper.cpp  WinHttpWrapper.h  stdafx.h
(+1497 files in other folders)
